Bugfix- Debug service not responding when user tries to fetch data multiple times #863